--- a/DHCP-java-chat/nbproject/project.properties
+++ b/DHCP-java-chat/nbproject/project.properties
@@ -32,6 +32,9 @@ endorsed.classpath=
 excludes=
 file.reference.eclipselink.jar=lib/eclipselink.jar
 file.reference.gson-2.2.2.jar=lib/gson-2.2.2.jar
+file.reference.jackson-annotations-2.7.5.jar=lib/jackson-annotations-2.7.5.jar
+file.reference.jackson-core-2.7.5.jar=lib/jackson-core-2.7.5.jar
+file.reference.jackson-databind-2.7.5.jar=lib/jackson-databind-2.7.5.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=lib/javax.persistence_2.1.0.v201304241213.jar
 file.reference.JTattoo-1.6.11.jar=lib/JTattoo-1.6.11.jar
 file.reference.mysql-connector-java-5.1.44-bin.jar=lib/mysql-connector-java-5.1.44-bin.jar
@@ -44,7 +47,10 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
     ${file.reference.eclipselink.jar}:\
     ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
-    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
+    ${file.reference.jackson-databind-2.7.5.jar}:\
+    ${file.reference.jackson-core-2.7.5.jar}:\
+    ${file.reference.jackson-annotations-2.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
