change: sua lai toan bo giao dien update: thong bao cho tat ca ban be: online khi dang nhap, offline khi thoat

--- a/DHCP-java-chat/nbproject/project.properties
+++ b/DHCP-java-chat/nbproject/project.properties
@@ -50,7 +50,8 @@ javac.classpath=\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}:\
     ${file.reference.jackson-databind-2.7.5.jar}:\
     ${file.reference.jackson-core-2.7.5.jar}:\
-    ${file.reference.jackson-annotations-2.7.5.jar}
+    ${file.reference.jackson-annotations-2.7.5.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
