--- a/DHCP-java-chat/nbproject/project.properties
+++ b/DHCP-java-chat/nbproject/project.properties
@@ -30,15 +30,24 @@ dist.jar=${dist.dir}/DHCP-java-chat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.eclipselink.jar=lib/eclipselink.jar
-file.reference.gson-2.2.2.jar=lib/gson-2.2.2.jar
-file.reference.jackson-annotations-2.7.5.jar=lib/jackson-annotations-2.7.5.jar
-file.reference.jackson-core-2.7.5.jar=lib/jackson-core-2.7.5.jar
-file.reference.jackson-databind-2.7.5.jar=lib/jackson-databind-2.7.5.jar
-file.reference.javax.persistence_2.1.0.v201304241213.jar=lib/javax.persistence_2.1.0.v201304241213.jar
-file.reference.JTattoo-1.6.11.jar=lib/JTattoo-1.6.11.jar
-file.reference.mysql-connector-java-5.1.44-bin.jar=lib/mysql-connector-java-5.1.44-bin.jar
-file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=lib/org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
+file.reference.cmu_time_awb.jar=lib\\cmu_time_awb.jar
+file.reference.cmu_us_kal.jar=lib\\cmu_us_kal.jar
+file.reference.cmudict04.jar=lib\\cmudict04.jar
+file.reference.cmulex.jar=lib\\cmulex.jar
+file.reference.cmutimelex.jar=lib\\cmutimelex.jar
+file.reference.eclipselink.jar=lib\\eclipselink.jar
+file.reference.en_us.jar=lib\\en_us.jar
+file.reference.freetts-jsapi10.jar=lib\\freetts-jsapi10.jar
+file.reference.freetts.jar=lib\\freetts.jar
+file.reference.gson-2.2.2.jar=lib\\gson-2.2.2.jar
+file.reference.jackson-annotations-2.7.5.jar=lib\\jackson-annotations-2.7.5.jar
+file.reference.jackson-core-2.7.5.jar=lib\\jackson-core-2.7.5.jar
+file.reference.jackson-databind-2.7.5.jar=lib\\jackson-databind-2.7.5.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
+file.reference.JTattoo-1.6.11.jar=lib\\JTattoo-1.6.11.jar
+file.reference.mbrola.jar=lib\\mbrola.jar
+file.reference.mysql-connector-java-5.1.44-bin.jar=lib\\mysql-connector-java-5.1.44-bin.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar=lib\\org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +60,25 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.7.5.jar}:\
     ${file.reference.jackson-core-2.7.5.jar}:\
     ${file.reference.jackson-annotations-2.7.5.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.cmu_time_awb.jar}:\
+    ${file.reference.cmu_us_kal.jar}:\
+    ${file.reference.cmudict04.jar}:\
+    ${file.reference.cmulex.jar}:\
+    ${file.reference.cmutimelex.jar}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.en_us.jar}:\
+    ${file.reference.freetts-jsapi10.jar}:\
+    ${file.reference.freetts.jar}:\
+    ${file.reference.gson-2.2.2.jar}:\
+    ${file.reference.jackson-annotations-2.7.5.jar}:\
+    ${file.reference.jackson-core-2.7.5.jar}:\
+    ${file.reference.jackson-databind-2.7.5.jar}:\
+    ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
+    ${file.reference.mbrola.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.2.v20140319-9ad6abd.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
